# IceGraph

./: .gitignore  CLAUDE.md  Dockerfile  README.md
.github/workflows/: deploy.yml
backend/: constants.py  iceberg_inventory_builder.py  iceberg_metadata_snapshot_map.py  icegraph_data_normalizer.py  main.py  pyproject.toml  spark_connect.py  utils.py
backend/base_classes/: base_file.py  collector.py  extractor.py  files_collection.py  spark_table_action.py  utils.py
backend/collectors/: collect_data_files.py  collect_manifests.py  collect_metadata.py  collect_snapshots.py  collector.py  utils.py
backend/extractors/: data_files_extractor.py  manifests_appearences_extractor.py  manifests_extractor.py
backend/graph_normalizer/: graph_normalizer.py  utils.py
backend/iceberg_inventory_builder/: collect_manifests.py  collect_metadata.py  collect_snapshots.py  collector.py  data_files_extractor.py  extractor.py  files_collection.py  iceberg_inventory_builder.py  manifests_appearences_extractor.py
backend/search_cutoff/: find_search_cutoff.py
backend/snapshot_map/: snapshot_mapping.py
backend/table_catalog/: table_list.py  table_list_utils.py
backend/table_inventory/: table_inventory.py  utils.py
backend/table_list_catalog/: table_list_catalog.py  utils.py
docker_demo/: Dockerfile  create_mock_tables.py  docker-compose.yml
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  appConstants.js  graphConstants.js  index.css  layoutConstants.js  main.jsx  uiTypography.js
frontend/src/components/: CatalogTableList.jsx  (+6 more)
(+14 files in other folders)
