[project]
name = "icegraph"
version = "0.1.0"
description = "Iceberg Metadata Visualizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.4.0",
    "flask==3.1.3",
    "grpcio==1.78.0",
    "numpy<2.0.0",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "pyspark[connect]==3.5.4",
    "python-dotenv==1.2.1",
    "setuptools>=75.0.0",
]
[tool.black]
line-length = 150